--- a/box.html
+++ b/box.html
@@ -21,6 +21,7 @@
            <div class="card">
                <h2>Quia, tempora sint?</h2>
                <p>In iure asperiores totam est?</p>
+               <a href="" class="gradient btn">Başvur</a>
            </div>
            <div class="card">
                <h2>Et, molestiae minima.</h2>
